<resources>
    <string name="app_name">자가격리자 전담공무원</string>
    <string name="dialog_name">격리자 상태 선택</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="header_name">이름</string>
    <string name="header_address">격리주소</string>
    <string name="header_state">격리지역\n이탈여부</string>
    <string name="list_name">name</string>
    <string name="list_address">address</string>
    <string name="list_state">state</string>
    <string name="list_state_time">state_time</string>
    <string name="custom_dialog_title">격 리 자 정 보</string>
    <string name="custom_dialog_name">이름 :</string>
    <string name="custom_dialog_birthdate">생년월일 :</string>
    <string name="custom_dialog_phonenumber">전화번호 :</string>
    <string name="custom_dialog_address">주소 :</string>
    <string name="custom_dialog_exit">확인</string>
    <string name="activity_managing_refresh">새로고침</string>
    <string name="activity_managing_myinfo">나의 정보</string>
    <string name="activity_managing_numpeople">자가격리자수 : 0</string>
    <string name="activity_managing_list">자가격리자 관리 목록</string>
    <string name="activity_login_title">자가격리자 전담공무원</string>
    <string name="activity_login_login">로그인</string>
    <string name="activity_login_name">성명</string>
    <string name="activity_login_hint">ex) 홍길동</string>
    <string name="activity_login_id">전담공무원ID</string>
    <string name="activity_login_password_hint">6자리 입력</string>
    <string name="activity_login_password">비밀번호</string>
    <string name="activity_login_phonenumber">핸드폰 번호</string>
    <string name="activity_login_phonenumber_hint">ex) 01012345678</string>
    <string name="activity_login_loginbutton">로그인</string>
    <string name="search_hint">이름이나 주소로 검색</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_map">지도보기</string>
</resources>
