<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#424242"
        android:gravity="center"
        android:text="@string/custom_dialog_title"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="8dp"
        android:text="@string/custom_dialog_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialog_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="8dp"
        android:text="@string/custom_dialog_birthdate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialog_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="8dp"
        android:text="@string/custom_dialog_phonenumber"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialog_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="8dp"
        android:text="@string/custom_dialog_address"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="#424242"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/custom_dialog_exit"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>