<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:weightSum="5"
    >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/header_name"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/header_address"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/state_header_txt"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/header_state"
        android:textColor="#000000"
        android:textSize="16sp" />
</LinearLayout>